kubernetes/do_provider/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-apps
    annotations:
           kubernetes.io/ingress.class: "nginx"
spec:
    rules:
    - host: "kakaroto.work"
      http:
        paths:
         - path: "/"
           pathType: Prefix
           backend:
             service:
               name: svc-app
               port:
                number: 5000
